--- a/templates/report.html
+++ b/templates/report.html
@@ -8,7 +8,7 @@
         <meta content="Free Website Template" name="description">
 
         <!-- Favicon -->
-        <link href="img/favicon.ico" rel="icon">
+        <link href="/static/img/favicon.ico" rel="icon">
 
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,15 +20,15 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
         <!-- Libraries Stylesheet -->
-        <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-        <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
-        <link href="lib/animate/animate.min.css" rel="stylesheet">
+        <link href="/static/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+        <link href="/static/lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+        <link href="/static/lib/animate/animate.min.css" rel="stylesheet">
 
         <!-- Customized Bootstrap Stylesheet -->
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
         <!-- Template Stylesheet -->
-        <link href="css/style.css" rel="stylesheet">
+        <link href="/static/css/style.css" rel="stylesheet">
     </head>
 
     <body>
@@ -44,7 +44,7 @@
             <div class="row g-5">
                 <div class="col-lg-4 sticky-lg-top vh-100">
                     <div class="d-flex flex-column h-100 text-center overflow-auto shadow">
-                        <img class="w-100 img-fluid mb-4" src="img/profile.jpg" alt="Image">
+                        <img class="w-100 img-fluid mb-4" src="/static/img/profile.jpg" alt="Image">
                         <h1 class="text-primary mt-2">Natalya Ivanenko</h1>
                         <div class="mb-4" style="height: 22px;">
                             <h4 class="typed-text-output d-inline-block text-light"></h4>
@@ -59,19 +59,19 @@
 
                         <div class="d-flex gap-4 justify-content-center mt-4">
                             <a href="https://t.me/natalja_009" target="_blank">
-                                <img src="img/icons/telegram.png" class="w-10 contact" style="width: 50px" alt="">
+                                <img src="/static/img/icons/telegram.png" class="w-10 contact" style="width: 50px" alt="">
                             </a>
 
                             <a href="https://wa.me/375336537795" target="_blank">
-                                <img src="img/icons/whatsapp.png" class="w-10 contact"  style="width: 50px" alt="">
+                                <img src="/static/img/icons/whatsapp.png" class="w-10 contact"  style="width: 50px" alt="">
                             </a>
 
                             <a href="mailto:natalya-09@mail.ru">
-                                <img src="img/icons/email.png" class="w-10 contact" style="width: 50px" alt="">
+                                <img src="/static/img/icons/email.png" class="w-10 contact" style="width: 50px" alt="">
                             </a>
 
                             <a href="https://github.com/natalyaivanenko123/Tesla.git" target="_blank">
-                                <img src="img/icons/gh.png" class="w-10 contact" style="width: 50px;  border: 1px solid white;    border-radius: 13px;    background: white;" alt="">
+                                <img src="/static/img/icons/gh.png" class="w-10 contact" style="width: 50px;  border: 1px solid white;    border-radius: 13px;    background: white;" alt="">
                             </a>
                         </div>
 
@@ -91,32 +91,11 @@
                 <div class="col-lg-8">
                     <!-- About Start -->
                     <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
-
                         {% if text %}
                             <p class="json"> {{ text }}
                         {% endif %}
-
                     </section>
 
-                    <!-- Footer Start -->
-                    <section class="wow fadeIn" data-wow-delay="0.1s">
-                        <div class="bg-black text-light text-center p-5">
-
-<!--                            <div class="d-flex justify-content-center mb-3">-->
-<!--                                <a class="text-light px-3 border-end" href="#">Privacy</a>-->
-<!--                                <a class="text-light px-3 border-end" href="#">Terms</a>-->
-<!--                                <a class="text-light px-3 border-end" href="#">FAQs</a>-->
-<!--                                <a class="text-light px-3" href="#">Help</a>-->
-<!--                            </div>-->
-
-                            <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-							<p class="m-0">&copy; All Rights Reserved.</p>
-                        </div>
-                    </section>
-                    <!-- Footer End -->
-                </div>
-            </div>
-        </div>
 
 
         <!-- Back to Top -->
@@ -125,21 +104,21 @@
         <!-- JavaScript Libraries -->
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-        <script src="lib/wow/wow.min.js"></script>
-        <script src="lib/typed/typed.min.js"></script>
-        <script src="lib/easing/easing.min.js"></script>
-        <script src="lib/waypoints/waypoints.min.js"></script>
-        <script src="lib/counterup/counterup.min.js"></script>
-        <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-        <script src="lib/isotope/isotope.pkgd.min.js"></script>
-        <script src="lib/lightbox/js/lightbox.min.js"></script>
+        <script src="/static/lib/wow/wow.min.js"></script>
+        <script src="/static/lib/typed/typed.min.js"></script>
+        <script src="/static/lib/easing/easing.min.js"></script>
+        <script src="/static/lib/waypoints/waypoints.min.js"></script>
+        <script src="/static/lib/counterup/counterup.min.js"></script>
+        <script src="/static/lib/owlcarousel/owl.carousel.min.js"></script>
+        <script src="/static/lib/isotope/isotope.pkgd.min.js"></script>
+        <script src="/static/lib/lightbox/js/lightbox.min.js"></script>
 
         <!-- Contact Javascript File -->
-        <script src="mail/jqBootstrapValidation.min.js"></script>
-        <script src="mail/contact.js"></script>
+        <script src="/static/mail/jqBootstrapValidation.min.js"></script>
+        <script src="/static/mail/contact.js"></script>
 
         <!-- Template Javascript -->
-        <script src="js/main.js"></script>
+        <script src="/static/js/main.js"></script>
     </body>
 
     <style>
