--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <met#aeb3b8et="utf-8">
-        <title>DarkCV - Bootstrap CV Resume Template</title>
+        <title>Natalya Ivanenko</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Free Website Template" name="keywords">
         <meta content="Free Website Template" name="description">
 
         <!-- Favicon -->
-        <link href="img/favicon.ico" rel="icon">
+        <link href="/static/img/favicon.ico" rel="icon">
 
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,15 +19,15 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
         <!-- Libraries Stylesheet -->
-        <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-        <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
-        <link href="lib/animate/animate.min.css" rel="stylesheet">
+        <link href="/static/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+        <link href="/static/lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+        <link href="/static/lib/animate/animate.min.css" rel="stylesheet">
 
         <!-- Customized Bootstrap Stylesheet -->
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
         <!-- Template Stylesheet -->
-        <link href="css/style.css" rel="stylesheet">
+        <link href="/static/css/style.css" rel="stylesheet">
     </head>
 
     <body>
@@ -44,7 +43,7 @@
             <div class="row g-5">
                 <div class="col-lg-4 sticky-lg-top vh-100">
                     <div class="d-flex flex-column h-100 text-center overflow-auto shadow">
-                        <img class="w-100 img-fluid mb-4" src="img/profile.jpg" alt="Image">
+                        <img class="w-100 img-fluid mb-4" src="/static/img/profile.jpg" alt="Image">
                         <h1 class="text-primary mt-2">Natalya Ivanenko</h1>
                         <div class="mb-4" style="height: 22px;">
                             <h4 class="typed-text-output d-inline-block text-light"></h4>
@@ -59,19 +58,19 @@
 
                         <div class="d-flex gap-4 justify-content-center mt-4">
                             <a href="https://t.me/natalja_009" target="_blank">
-                                <img src="img/icons/telegram.png" class="w-10 contact" style="width: 50px" alt="">
+                                <img src="/static/img/icons/telegram.png" class="w-10 contact" style="width: 50px" alt="">
                             </a>
 
                             <a href="https://wa.me/375336537795" target="_blank">
-                                <img src="img/icons/whatsapp.png" class="w-10 contact"  style="width: 50px" alt="">
+                                <img src="/static/img/icons/whatsapp.png" class="w-10 contact"  style="width: 50px" alt="">
                             </a>
 
                             <a href="mailto:natalya-09@mail.ru">
-                                <img src="img/icons/email.png" class="w-10 contact" style="width: 50px" alt="">
+                                <img src="/static/img/icons/email.png" class="w-10 contact" style="width: 50px" alt="">
                             </a>
 
                             <a href="https://github.com/natalyaivanenko123/Tesla.git" target="_blank">
-                                <img src="img/icons/gh.png" class="w-10 contact" style="width: 50px;  border: 1px solid white;    border-radius: 13px;    background: white;" alt="">
+                                <img src="/static/img/icons/gh.png" class="w-10 contact" style="width: 50px;  border: 1px solid white;    border-radius: 13px;    background: white;" alt="">
                             </a>
                         </div>
 
@@ -352,31 +351,38 @@ Via the website Tesla.com electric vehicles are being purchased. With the help o
 
                                     </div>
                                 </div>
-                                <div class="row portfolio-container">
-                                    <div class="project-item col-md-6 mb-4 portfolio-item first">
+                                <div class="row portfolio-containe align-items-center" style="align-items: center; display: flex;">
+                                    <div class="project-item col-md-4 mb-4 portfolio-item first">
                                         <div class="position-relative overflow-hidden mb-2">
-                                            <img class="img-fluid w-100" src="img/10885432.gif" alt="">
-                                           <div class="project-item-text">
-                                               Tests UI (Tesla.com)
-                                           </div>
+                                            <a href="/whois" target="blank">
+                                                <img class="/static/img-fluid w-100" src="/static/img/testing.jpg" alt="">
+    <!--                                           <div class="project-item-text">-->
+    <!--                                               Tests UI (Tesla.com)-->
+    <!--                                           </div>-->
+                                            </a>
                                         </div>
                                     </div>
 
-                                    <div class="col-md-6 mb-4 portfolio-item second">
+                                    <div class="col-md-4 mb-4 portfolio-item second">
                                         <div class="project-item position-relative overflow-hidden mb-2">
-                                            <img class="img-fluid w-100" src="img/world-globe-neon-sign-vector-26918223.jpg" alt="">
-                                            <div class="project-item-text">
-                                                API Tests
-                                           </div>
+                                            <a href="/runapi" target="blank">
+
+                                                <img class="/static/img-fluid w-100" src="/static/img/api.jpg" alt="">
+    <!--                                            <div class="project-item-text">-->
+    <!--                                                API Tests-->
+    <!--                                           </div>-->
+                                            </a>
                                         </div>
                                     </div>
 
-                                    <div class="col-md-6 mb-4 portfolio-item second">
+                                    <div class="col-md-4 mb-4 portfolio-item second">
                                         <div class="project-item position-relative overflow-hidden mb-2">
-                                            <img class="img-fluid w-100" src="img/1674852248_top-fon-com-p-foni-dlya-prezentatsii-neon-148.jpg" alt="">
-                                            <div class="project-item-text">
-                                                Allure
-                                           </div>
+                                             <a href="/runallure" target="blank">
+                                                <img class="/static/img-fluid w-100" src="/static/img/allure.jpg" alt="">
+    <!--                                            <div class="project-item-text">-->
+    <!--                                                Allure-->
+    <!--                                           </div>-->
+                                             </a>
                                         </div>
                                     </div>
                                 </div>
@@ -393,7 +399,7 @@ Via the website Tesla.com electric vehicles are being purchased. With the help o
 <!--                                <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>-->
 <!--                                <p class="fs-4 mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet accusam amet eirmod eos, labore diam clita</p>-->
 <!--                                <div class="d-flex align-items-center">-->
-<!--                                    <img class="img-fluid" src="img/testimonial-1.jpg" style="width: 60px; height: 60px;">-->
+<!--                                    <img class="/static/img-fluid" src="/static/img/testimonial-1.jpg" style="width: 60px; height: 60px;">-->
 <!--                                    <div class="ps-3">-->
 <!--                                        <p class="text-primary fs-5 mb-1">Client Name</p>-->
 <!--                                        <i>Profession</i>-->
@@ -404,7 +410,7 @@ Via the website Tesla.com electric vehicles are being purchased. With the help o
 <!--                                <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>-->
 <!--                                <p class="fs-4 mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet accusam amet eirmod eos, labore diam clita</p>-->
 <!--                                <div class="d-flex align-items-center">-->
-<!--                                    <img class="img-fluid" src="img/testimonial-2.jpg" style="width: 60px; height: 60px;">-->
+<!--                                    <img class="/static/img-fluid" src="/static/img/testimonial-2.jpg" style="width: 60px; height: 60px;">-->
 <!--                                    <div class="ps-3">-->
 <!--                                        <p class="text-primary fs-5 mb-1">Client Name</p>-->
 <!--                                        <i>Profession</i>-->
@@ -415,7 +421,7 @@ Via the website Tesla.com electric vehicles are being purchased. With the help o
 <!--                                <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>-->
 <!--                                <p class="fs-4 mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet accusam amet eirmod eos, labore diam clita</p>-->
 <!--                                <div class="d-flex align-items-center">-->
-<!--                                    <img class="img-fluid" src="img/testimonial-3.jpg" style="width: 60px; height: 60px;">-->
+<!--                                    <img class="/static/img-fluid" src="/static/img/testimonial-3.jpg" style="width: 60px; height: 60px;">-->
 <!--                                    <div class="ps-3">-->
 <!--                                        <p class="text-primary fs-5 mb-1">Client Name</p>-->
 <!--                                        <i>Profession</i>-->
@@ -437,19 +443,19 @@ Via the website Tesla.com electric vehicles are being purchased. With the help o
 
 <!--                        <div class="d-flex gap-4">-->
 <!--                            <a href="https://t.me/natalja_009" target="_blank">-->
-<!--                                <img src="img/icons/telegram.png" class="w-10" style="width: 50px" alt="">-->
+<!--                                <img src="/static/img/icons/telegram.png" class="w-10" style="width: 50px" alt="">-->
 <!--                            </a>-->
 
 <!--                            <a href="https://wa.me/375336537795" target="_blank">-->
-<!--                                <img src="img/icons/whatsapp.png" class="w-10" style="width: 50px" alt="">-->
+<!--                                <img src="/static/img/icons/whatsapp.png" class="w-10" style="width: 50px" alt="">-->
 <!--                            </a>-->
 
 <!--                            <a href="mailto:natalya-09@mail.ru">-->
-<!--                                <img src="img/icons/email.png" class="w-10" style="width: 50px" alt="">-->
+<!--                                <img src="/static/img/icons/email.png" class="w-10" style="width: 50px" alt="">-->
 <!--                            </a>-->
 
 <!--                            <a href="mailto:natalya-09@mail.ru">-->
-<!--                                <img src="img/icons/gh.png" class="w-10" style="width: 50px;  border: 1px solid white;    border-radius: 13px;    background: white;" alt="">-->
+<!--                                <img src="/static/img/icons/gh.png" class="w-10" style="width: 50px;  border: 1px solid white;    border-radius: 13px;    background: white;" alt="">-->
 <!--                            </a>-->
 <!--                        </div>-->
 <!--                        </p>-->
@@ -485,21 +491,21 @@ Via the website Tesla.com electric vehicles are being purchased. With the help o
         <!-- JavaScript Libraries -->
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-        <script src="lib/wow/wow.min.js"></script>
-        <script src="lib/typed/typed.min.js"></script>
-        <script src="lib/easing/easing.min.js"></script>
-        <script src="lib/waypoints/waypoints.min.js"></script>
-        <script src="lib/counterup/counterup.min.js"></script>
-        <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-        <script src="lib/isotope/isotope.pkgd.min.js"></script>
-        <script src="lib/lightbox/js/lightbox.min.js"></script>
+        <script src="/static/lib/wow/wow.min.js"></script>
+        <script src="/static/lib/typed/typed.min.js"></script>
+        <script src="/static/lib/easing/easing.min.js"></script>
+        <script src="/static/lib/waypoints/waypoints.min.js"></script>
+        <script src="/static/lib/counterup/counterup.min.js"></script>
+        <script src="/static/lib/owlcarousel/owl.carousel.min.js"></script>
+        <script src="/static/lib/isotope/isotope.pkgd.min.js"></script>
+        <script src="/static/lib/lightbox/js/lightbox.min.js"></script>
 
         <!-- Contact Javascript File -->
-        <script src="mail/jqBootstrapValidation.min.js"></script>
-        <script src="mail/contact.js"></script>
+        <script src="/static/mail/jqBootstrapValidation.min.js"></script>
+        <script src="/static/mail/contact.js"></script>
 
         <!-- Template Javascript -->
-        <script src="js/main.js"></script>
+        <script src="/static/js/main.js"></script>
     </body>
 
     <style>
